syntax = "proto3";

package gs.commons.dto;

message Status {
    State state = 1;
    string content = 2;
}

message State {
    int64 code = 1;
    string message = 2;
    bool ok = 3;
}

message Authorize {
    string clientId = 1;
    string userId = 2;
    string ip = 3;
    string device = 4;
    string userAgent = 5;
    int64 platform = 6;
    string appId = 7;
}

message AppSettings {
    int64 enabled = 1;
}